# mini-pixels

./: CMakeLists.txt
pixels-core/: CMakeCache.txt  CMakeLists.txt
pixels-core/include/vector/: ColumnVector.h  DateColumnVector.h  DecimalColumnVector.h  TimestampColumnVector.h
pixels-core/lib/vector/: BinaryColumnVector.cpp  ByteColumnVector.cpp  DateColumnVector.cpp  DecimalColumnVector.cpp  TimestampColumnVector.cpp
pixels-core/pixels-common/src/liburing-stamp/: liburing-gitinfo.txt
pixels-core/pixels-common/tmp/: liburing-gitclone.cmake  liburing-gitupdate.cmake
pixels-core/pixels-duckdb/: DuckDBConfig.cmake
pixels-core/pixels-duckdb/codegen/include/: generated_extension_headers.hpp
pixels-core/pixels-duckdb/codegen/src/: generated_extension_loader.cpp
pixels-core/pixels-duckdb/src/catalog/: ub_duckdb_catalog.cpp
pixels-core/pixels-duckdb/src/common/: ub_duckdb_common.cpp.tmp
pixels-core/pixels-duckdb/src/core_functions/: ub_duckdb_core_functions.cpp
pixels-core/pixels-duckdb/src/execution/: ub_duckdb_execution.cpp
pixels-core/pixels-duckdb/src/function/: ub_duckdb_function.cpp
pixels-core/pixels-duckdb/src/main/: ub_duckdb_main.cpp
pixels-core/pixels-duckdb/src/optimizer/: ub_duckdb_optimizer.cpp.tmp
pixels-core/pixels-duckdb/src/parallel/: ub_duckdb_parallel.cpp.tmp
pixels-core/pixels-duckdb/src/parser/: ub_duckdb_parser.cpp.tmp
pixels-core/pixels-duckdb/src/planner/: ub_duckdb_planner.cpp.tmp
pixels-core/tests/: CMakeLists.txt  test_TimestampColumnVector.cpp
tests/: CMakeLists.txt  test_TimestampColumnVector.cpp
(+149 files in other folders)
